refactor: implemented requested change by sonar qube